Closed Bug 356122 Opened 18 years ago Closed 18 years ago

Bad license header info in RolloverImageButton.h

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
trivial

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: alqahira, Assigned: alqahira)

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

RolloverImageButton.h, a new file added in bug 235864, has the original author being Netscape in 2006 instead of Aaron in 2006 (the corresponding .m has the right header).
I don't believe corrections like this require r/sr for checkin, but r? Aaron for verification that the change is "correct".
Attachment #241806 - Flags: review?(aschulm)
Summary: Bad header info in RolloverImageButton.h → Bad license header info in RolloverImageButton.h
Comment on attachment 241806 [details] [diff] [review]
Syncs the license header with the .m

Looks good to me
Attachment #241806 - Flags: review?(aschulm) → review+
Comment on attachment 241806 [details] [diff] [review]
Syncs the license header with the .m

Sending this over to pink for sr
Attachment #241806 - Flags: superreview?(mikepinkerton)
Comment on attachment 241806 [details] [diff] [review]
Syncs the license header with the .m

rs=pink
Attachment #241806 - Flags: superreview?(mikepinkerton) → superreview+
Assignee: nobody → alqahira
Checked in on 1.8branch and trunk.
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: