Bad license header info in RolloverImageButton.h. patch by ardissone <alqahira@mindspring.com> r=aschulm sr=pink b=356122