camino/src/extensions/RolloverImageButton.h
@@ -11,10 +11,10 @@
  * for the specific language governing rights and limitations under the
  * License.
  *
- * The Original Code is Chimera code.
+ * The Original Code is Camino code.
  *
  * The Initial Developer of the Original Code is
- * Netscape Communications Corporation.
+ * Aaron Schulman <aschulm@umd.edu>
  * Portions created by the Initial Developer are Copyright (C) 2006
  * the Initial Developer. All Rights Reserved.
  *
